--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@react-three/drei": "9.56.22",
     "@react-three/fiber": "^8.11.0",
     "@react-three/postprocessing": "^2.16.2",
+    "@vercel/speed-insights": "^1.0.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
